Add list of initiated backups endpoint
